# RehabFlow_AI

./: .env.example  .gitignore  CHECKLIST.md  README.md  WRITEUP.md  app.py  build_output.txt  model_utils.py  prompts.py  requirements.txt  utils.py
backend/: main.py  requirements.txt
backend/api/: health.py
backend/core/: auth.py  config.py  logger.py  security.py
backend/db/: redis.py  schema.sql  supabase.py
backend/routes/: ai.py  progress.py  youtube.py
backend/services/: ai_service.py  supabase_service.py  youtube_service.py
frontend/: eslint.config.mjs  middleware.ts  package-lock.json  package.json
frontend/components/: LanguageSwitcher.tsx  protected-route.tsx
frontend/hooks/: useLocaleRedirect.ts
frontend/i18n/: request.ts  routing.ts
frontend/lib/: auth-provider.tsx
rehabflow_ai/: APP_IMPLEMENTATION.md  README.md  app.py  main.py  pyproject.toml
rehabflow_ai/ai/: __init__.py  image_analysis.py  medgemma.py  plan_adapter.py  plan_generator.py  prompt_builder.py
rehabflow_ai/core/: __init__.py  concurrency.py  database.py  report_generator.py  session_engine.py  supabase_client.py
rehabflow_ai/models/: __init__.py
rehabflow_ai/security/: __init__.py  sanitizer.py  validator.py
rehabflow_ai/ui/: __init__.py  assessment.py  auth.py  home.py  plan.py  progress.py  report.py  session.py
rehabflow_ai/utils/: __init__.py  config.py  logger.py
submission_ready/: demo_video_script.md  writeup_template_notes.md
tests/: conftest.py  requirements-test.txt  test_ai_service.py  test_cors.py  test_integration.py  test_supabase_service.py
(+37 files in other folders)
